- moved exception handling to separate controller   - added 401 error template   - displayed logged user   - started restore password functionality   - tiny refactoring and logging improvements