@@ -1,7 +1,7 @@
 package com.essheva.wordMemo.crypto;
 
 import com.essheva.wordMemo.exceptions.InternalServerError;
-import sun.misc.BASE64Encoder;
+import lombok.extern.slf4j.Slf4j;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
@@ -12,16 +12,18 @@ import java.util.Arrays;
 import java.util.Base64;
 import java.util.Random;
 
+@Slf4j
 public class EncryptionUtils {
 
     private static final Random GENERATOR = new SecureRandom();
     private static final String ALNUM = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
     private static final int ITERATIONS = 10000;
+    private static final int SALT_LENGTH = 64;
     private static final int KEY_LENGTH = 256;
 
-    public static String getSalt(int length) {
-        StringBuilder salt = new StringBuilder(length);
-        for (int i = 0; i < length; i++) {
+    public static String getSalt() {
+        StringBuilder salt = new StringBuilder(SALT_LENGTH);
+        for (int i = 0; i < SALT_LENGTH; i++) {
             salt.append(ALNUM.charAt(GENERATOR.nextInt(ALNUM.length())));
         }
         return salt.toString();
@@ -34,6 +36,7 @@ public class EncryptionUtils {
             SecretKeyFactory skf = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA1");
             return skf.generateSecret(spec).getEncoded();
         } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
+            log.error("Error during hashing a password.", e);
             throw new InternalServerError("Error while hashing a password: " + e.getMessage(), e);
         } finally {
             spec.clearPassword();
@@ -53,7 +56,6 @@ public class EncryptionUtils {
     public static String generateId() {
         byte[] randomBytes = new byte[32];
         GENERATOR.nextBytes(randomBytes);
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(randomBytes);
+        return Base64.getEncoder().encodeToString(randomBytes);
     }
 }
